force-app/main/default/objects/Dev_Owner_Lookup__c/Dev_Owner_Lookup__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing : Owner lookup table for DIScover for different data sources such as Developer Programs, Feedback Surveys, Events, etc.</description>
    <label>Dev Owner Lookup</label>
    <nameField>
        <displayFormat>DEV-OWNER-{000}</displayFormat>
        <label>Dev Owner Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Owner Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>