force-app/main/default/objects/Dev_Owner_Lookup__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Specifies the data source whether a developer program, feedback survey, event, etc.</description>
    <label>Data Source</label>
    <length>216</length>
    <required>true</required>
    <type>Text</type>
</CustomField>