force-app/main/default/objects/Dev_Owner_Lookup__c/fields/Data_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_ID__c</fullName>
    <description>Data source ID as it appears in the source API</description>
    <label>Data Source ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>