force-app/main/default/objects/Dev_Owner_Lookup__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the specific developer program, feedback survey or event</description>
    <label>Name</label>
    <length>216</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>