force-app/main/default/objects/Dev_Owner_Lookup__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Name of the owner of the specific developer program, feedback survey or event</description>
    <label>Owner</label>
    <length>216</length>
    <required>true</required>
    <type>Text</type>
</CustomField>