force-app/main/default/objects/Dev_Owner_Lookup__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <description>E-mail of owner of specific developer program, feedback survey or event</description>
    <label>Owner Email</label>
    <length>216</length>
    <required>true</required>
    <type>Text</type>
</CustomField>